--- a/locales/ja/LC_MESSAGES/intro.po
+++ b/locales/ja/LC_MESSAGES/intro.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Scientific Python Lectures 2025.1rc0.dev0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-24 00:13+0000\n"
+"POT-Creation-Date: 2025-05-06 12:31+0000\n"
 "PO-Revision-Date: 2024-11-27 19:15+0000\n"
 "Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2025\n"
 "Language-Team: Japanese (https://app.transifex.com/tkoyama010/teams/202028/ja/)\n"
@@ -9882,7 +9882,7 @@ msgstr ""
 
 #: ../../scientific-python-lectures/intro/scipy/auto_examples/solutions/plot_curvefit_temperature_data.rst:33
 msgid "The data"
-msgstr ""
+msgstr "データ"
 
 #: ../../scientific-python-lectures/intro/scipy/auto_examples/solutions/plot_curvefit_temperature_data.rst:56
 msgid "Fitting it to a periodic function"
