--- a/locales/ja/LC_MESSAGES/guide.po
+++ b/locales/ja/LC_MESSAGES/guide.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Scientific Python Lectures 2025.1rc0.dev0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-03-29 00:12+0000\n"
+"POT-Creation-Date: 2025-05-10 00:13+0000\n"
 "PO-Revision-Date: 2024-11-27 19:15+0000\n"
 "Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2025\n"
 "Language-Team: Japanese (https://app.transifex.com/tkoyama010/teams/202028/ja/)\n"
@@ -65,7 +65,7 @@ msgid ""
 ":ref:`Go to the end <sphx_glr_download_guide_auto_examples_plot_simple.py>` "
 "to download the full example code."
 msgstr ""
-":ref:`Go to the end <sphx_glr_download_guide_auto_examples_plot_simple.py>` "
+":ref:`最後まで <sphx_glr_download_guide_auto_examples_plot_simple.py>` "
 "をクリックすると完全なサンプルコードをダウンロードできます。"
 
 #: ../../scientific-python-lectures/guide/auto_examples/plot_simple.rst:22
