[ci skip] 42097743376 https://github.com/tkoyama010/scientific-python-lectures-translations/actions/runs/14985213068/job/42097743376

--- a/locales/ja/LC_MESSAGES/packages.po
+++ b/locales/ja/LC_MESSAGES/packages.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Scientific Python Lectures 2025.1rc0.dev0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-05-11 00:15+0000\n"
+"POT-Creation-Date: 2025-05-13 00:14+0000\n"
 "PO-Revision-Date: 2024-11-27 19:15+0000\n"
 "Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2025\n"
 "Language-Team: Japanese (https://app.transifex.com/tkoyama010/teams/202028/ja/)\n"
@@ -4401,6 +4401,8 @@ msgid ""
 "optimal model for your data is vital, and is a piece of the problem that is "
 "not often appreciated by machine learning practitioners."
 msgstr ""
+"バリデーションとクロスバリデーションに関連する問題は機械学習の実践における最も重要な側面のいくつかです。データに最適なモデルを選択することが重要です、 "
+"これは、機械学習の専門家にはあまり理解されていない問題の一部です。"
 
 #: ../../scientific-python-lectures/packages/scikit-learn/index.rst:1376
 msgid ""
