--- a/locales/ja/LC_MESSAGES/packages.po
+++ b/locales/ja/LC_MESSAGES/packages.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Scientific Python Lectures 2025.1rc0.dev0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-05-18 00:15+0000\n"
+"POT-Creation-Date: 2025-05-19 00:15+0000\n"
 "PO-Revision-Date: 2024-11-27 19:15+0000\n"
 "Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2025\n"
 "Language-Team: Japanese (https://app.transifex.com/tkoyama010/teams/202028/ja/)\n"
@@ -4421,7 +4421,7 @@ msgstr ""
 msgid ""
 "The central question is: **If our estimator is underperforming, how should "
 "we move forward?**"
-msgstr ""
+msgstr "中心的な問題は: **エスティメーターのパフォーマンスが低い場合、どのように前進すべきでしょうか？**"
 
 #: ../../scientific-python-lectures/packages/scikit-learn/index.rst:1379
 msgid "Use simpler or more complicated model?"
@@ -4449,7 +4449,7 @@ msgstr ""
 
 #: ../../scientific-python-lectures/packages/scikit-learn/index.rst:1390
 msgid "Bias-variance trade-off: illustration on a simple regression problem"
-msgstr ""
+msgstr "バイアスと分散のトレードオフ: 単純回帰問題のイラスト"
 
 #: ../../scientific-python-lectures/packages/scikit-learn/index.rst:1394
 msgid ""
